# Sport-Prediction

./: .env.example  .gitignore  AGENTS.md  README.md
F1/Rising Qualification Prediction/Python/: README.md  run_prediction.py
F1/Rising Qualification Prediction/Python/rqp/: __init__.py  config.py  constants.py  data.py  training.py
Football/Match Result Prediction/Python/: run_prediction.py
Football/Match Result Prediction/Python/mrp/: __init__.py  config.py  data.py  prediction.py
data/: README.md
data/football/: README.md
platform/backend/: Cargo.toml  README.md  package.json
platform/backend/src/: index.js  main.rs
platform/web/: README.md  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
platform/web/app/: globals.css  layout.tsx  page.tsx
platform/web/app/compare/: page.tsx
platform/web/app/diagnostics/: page.tsx
platform/web/app/f1/: page.tsx
platform/web/app/f1/preview/: page.tsx
platform/web/app/f1/qualifying/: page.tsx
platform/web/app/football/: page.tsx
platform/web/app/research/: page.tsx
platform/web/app/runs/: page.tsx
platform/web/app/settings/: page.tsx
platform/web/app/sweeps/: page.tsx
platform/web/components/: F1Preview.tsx  F1Review.tsx  FootballPreview.tsx  HomeDashboard.tsx  NotebookViewer.tsx  ResearchExplorer.tsx  RunForm.tsx  RunResult.tsx  RunsCompare.tsx  Sidebar.tsx  SweepChart.tsx  SweepForm.tsx  ToastHost.tsx  TopBar.tsx  UiPreferencesBootstrap.tsx
platform/web/lib/: api.ts  toast.ts  types.ts  uiPreferences.ts
research/: README.md  sport_cli.py
research/papers/: README.md
(+24 files in other folders)
